# earned-signal

./: .gitattributes  .gitignore  AGENTS.md  CONTEXT-MAP.md  README.md  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.github/: dependabot.yml
.github/scripts/: materialize-deploy-config.mjs  materialize-deploy-config.test.mjs  verify-operations-evidence.mjs  verify-operations-evidence.test.mjs  verify-web-build.mjs  verify-web-build.test.mjs
.github/workflows/: ci.yml  deploy.yml
apps/optimizer/: README.md  package.json  worker-configuration.d.ts  wrangler.jsonc
apps/simulator/: package.json  tsconfig.json  worker-configuration.d.ts  wrangler.jsonc
apps/web/: CONTEXT.md  index.html  package.json  tsconfig.json  vite.config.ts  worker-configuration.d.ts  wrangler.integration.jsonc  wrangler.jsonc
apps/web-next/: package.json  tsconfig.json  vitest.config.ts  worker-configuration.d.ts  wrangler.jsonc
docs/: cross-project-load.md  deployment-architecture.md  mvp-spec.md
docs/adr/: 0001-project-command-boundary.md  0002-oidc-project-authorization.md  0003-stateless-remote-mcp.md  0004-production-scheduling-semantics.md  (+8 more)
scripts/: beta-e2e.example.json  beta-e2e.mjs  beta-smoke.mjs  verify-beta-readiness.mjs
services/forecast-simulator/: Dockerfile  README.md  pyproject.toml
services/forecast-simulator/benchmarks/: benchmark_simulator.py
services/forecast-simulator/forecast_simulator/: __init__.py  api.py  contracts.py  simulator.py
services/forecast-simulator/tests/: __init__.py  test_api.py  test_simulator.py
(+209 files in other folders)
